force-app/main/default/objects/Opportunity_Focus__c/Opportunity_Focus__c.object-meta.xml
<CustomObject>
    <description>Contains user driven descriptions of specific types of focus being used to classify or categorise Opportunities</description>
    <label>Opportunity Focus</label>
    <nameField>
        <label>Opportunity Focus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Focus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>