force-app/main/default/objects/Opportunity_Focus__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique Identifier</inlineHelpText>
    <label>UID</label>
    <type>Text</type>
</CustomField>