force-app/main/default/objects/Opportunity_Focus__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this focus setting is to be village specific then associate it with the appropriate village</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Opportunity Focus</relationshipLabel>
    <relationshipName>Opportunity_Focus</relationshipName>
    <type>Lookup</type>
</CustomField>