force-app/main/default/objects/Opportunity_Focus__c/listViews/Suzhou_Focus.listView-meta.xml
<ListView>
    <fullName>Suzhou_Focus</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Suzhou</value>
    </filters>
    <label>Suzhou Focus</label>
</ListView>